# yinmi-desktop

./: .editorconfig  .gitignore  .prettierignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  prettier.config.js  rust-toolchain.toml  svelte.config.js  tauri.release.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: platform-smoke.yml  quality.yml  release.yml
docs/feasibility/: evidence-scopes.json  evidence.schema.json  toolchain-ci.json  toolchain-ci.md
docs/plans/: 2026-07-14-music-desktop-design.md
docs/superpowers/plans/: 2026-07-14-yinmi-phase-1-feasibility.md
scripts/: feasibility-evidence.mjs  feasibility-evidence.test.mjs  release-guard.mjs  run-signature-lifecycle-probe.mjs  run-signature-lifecycle-probe.test.mjs  signature-wire-contract.mjs  tauri-bundle-prebuilt.mjs  verify-ci.mjs  verify-config.mjs  verify-default-artifacts.mjs  verify-signature-host.mjs  verify-signature-host.test.mjs
src/: App.svelte  App.test.ts  app.css  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.feasibility.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: feasibility-main.json  main.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: app-runtime.toml  feasibility.toml  music.toml
src-tauri/permissions/autogenerated/: app_cancel_exit.toml  app_confirm_exit.toml  app_get_activity_status.toml  app_initialize.toml  app_open_log_directory.toml  app_prepare_restart.toml  app_set_update_active.toml  feasibility_ipc_canary.toml  feasibility_run_gd_probe.toml  feasibility_signature_destroy.toml  feasibility_signature_initialize.toml  feasibility_signature_isolation.toml  feasibility_signature_sign.toml  music_cancel_all_downloads.toml  music_cancel_current_download.toml  music_download_batch.toml  music_get_default_directory.toml  music_get_download_snapshot.toml  music_get_search_snapshot.toml  music_open_download_directory.toml  music_retry_failed.toml  music_scan_existing.toml  music_search.toml
src-tauri/src/: app_runtime.rs  lib.rs  main.rs
src-tauri/src/feasibility/: gd_live.rs  mod.rs  signature_host.rs  signature_probe.rs  signature_webview.rs  webview_resource_policy.rs
src-tauri/src/feasibility/webview_resource_policy/: macos.rs  windows.rs
src-tauri/src/music/: contract.rs  download.rs  mod.rs  network_policy.rs  rate_limiter.rs  search.rs  storage_space.rs
src-tauri/src/signature/: mod.rs  signature_host.rs  signature_webview.rs  webview_resource_policy.rs
src-tauri/src/signature/webview_resource_policy/: macos.rs  windows.rs
src-tauri/tests/: gd_contract.rs
src-tauri/tests/fixtures/gd/: README.md  explicit_error.json  lyric_empty.json  lyric_success.json  pic_success.json  search_mixed.json  url_empty.json  url_lower_bitrate.json  url_missing_bitrate.json  url_success.json
src-tauri/tests/fixtures/signature/: windows-10-webview2-111-x64-isolation-report.json
src/lib/common/: error.ts
src/lib/feasibility/: FeasibilityPanel.svelte  GdProbe.svelte
src/lib/music/: model.ts
src/lib/product/: DownloadBar.svelte  RuntimeTools.svelte  SearchPage.svelte  SearchResults.svelte  WindowControls.svelte  downloadView.ts  windowChrome.ts
src/lib/product/icons/: FolderOpenIcon.svelte
