[package]
name = "yinmi"
version = "0.1.0"
description = "音觅桌面音乐搜索下载工具"
edition = "2024"
rust-version = "1.97"

[lib]
name = "yinmi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.5", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
feasibility = []
