[package]
name = "yinmi"
version = "0.1.1"
description = "音觅桌面音乐搜索下载工具"
edition = "2024"
rust-version = "1.97"

[lib]
name = "yinmi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
lofty = "0.24"
log = "0.4"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2.11.5", features = ["unstable"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
url = "2"
wry = { version = "=0.55.1", default-features = false, features = ["os-webview"] }

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows-core = "0.61"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
libc = "0.2"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-web-kit = { version = "0.3", features = ["WKContentRuleList", "WKContentRuleListStore", "WKUserContentController", "WKWebView", "WKWebViewConfiguration", "WKWebsiteDataStore"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
